--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   permission_handler: ^12.0.1
   intl: ^0.20.2
   uuid: ^4.5.2
+  flutter_background_service_android: ^6.3.1
 
 dev_dependencies:
   flutter_test:
